# Quake

./: .gitignore  CMakeLists.txt
Quake/: cd_sdl.c  gl_draw.c  gl_mesh.c  gl_model.c  gl_model.h  gl_rmain.c  gl_rmisc.c  gl_sky.c  gl_texmgr.c  gl_vidsdl.c  gl_warp.c  glquake.h  in_sdl.c  main_sdl.c  pl_linux.c  pl_osx.m  pl_win.c  q_sound.h  quakedef.h  r_alias.c  r_brush.c  r_world.c  snd_sdl.c  sys_sdl_unix.c  sys_sdl_win.c  wad.h
